--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html class="no-js" lang="" ng-app="simplexApp">
     <head>
-        <script src="js/vendor/angular.min.js"></script>
-        <script src="js/controllers/simplex.js"></script>
+        <script src="{{ url_for('static', filename='js/vendor/angular.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/controllers/simplex.js') }}"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
@@ -10,17 +10,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
         <style>
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
             }
         </style>
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="{{ url_for('static', filename='js/vendor/modernizr-2.8.3-respond-1.4.2.min.js') }}"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -59,8 +59,10 @@
             <th>Z = </th>
             <th ng-repeat="variable in objectiveFunction track by $index">
               <span><button class="remove" ng-click="removeVariable($index)"><i class="glyphicon glyphicon-minus"></i></button></span>
+              {% raw %}
               <input id="objectFunction-{{$index}}" name="objectiveFunction[$index]" ng-model="objectiveFunction[$index]">
               <label for="objectFunction-{{$index}}">x{{$index+1}}</label>
+              {% endraw %}
             </th>
             <th></th>
             <th></th>
@@ -71,8 +73,10 @@
                 <button class="remove" ng-click="removeConstraint($index)"><i class="glyphicon glyphicon-minus"></i></button>
               </td>
               <td class="expression-col" ng-repeat="variable in constraint track by $index">
+                {% raw %}
                 <input id="objectFunction-{{$parent.$index}}-{{$index}}" name="constraints[$parent.$index][$index]" ng-model="constraints[$parent.$index][$index]">
                 <label for="objectFunction-{{$parent.$index}}-{{$index}}">x{{$index+1}}</label>
+                {% endraw %}
               </td>
               <td>
                 <select name="constraintSigns[$index]" ng-model="constraintSigns[$index]">
@@ -100,9 +104,9 @@
     </div> <!-- /container -->        
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="{{url_for('static', filename='js/vendor/jquery-1.11.2.min.js') }}"><\/script>')</script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="{{ url_for('static', filename='js/vendor/bootstrap.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     </body>
 </html>
