--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="" ng-app="simplexApp">
     <head>
+        <script src="{{ url_for('static', filename='js/vendor/sweetalert.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/vendor/angular.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/angular/simplex.js') }}"></script>
 
@@ -19,6 +20,7 @@
             }
         </style>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/sweetalert.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
         <script src="{{ url_for('static', filename='js/vendor/modernizr-2.8.3-respond-1.4.2.min.js') }}"></script>
