--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -71,7 +71,7 @@
               <th ng-repeat="variable in objectiveFunction track by $index">
                 <span><button class="remove" ng-click="removeVariable($index)"><i class="glyphicon glyphicon-minus"></i></button></span>
                 {% raw %}
-                <input type="number" min="0" step="0.5" id="objectFunction-{{$index}}" name="objectiveFunction[$index]" ng-model="objectiveFunction[$index]" required>
+                <input type="number" step="0.5" id="objectFunction-{{$index}}" name="objectiveFunction[$index]" ng-model="objectiveFunction[$index]" required>
                 <label for="objectFunction-{{$index}}">x{{$index+1}}</label>
                 {% endraw %}
               </th>
@@ -90,7 +90,7 @@
                 </td>
                 <td class="expression-col" ng-repeat="variable in constraint track by $index">
                   {% raw %}
-                  <input type="number" min="0" step="0.5" id="objectFunction-{{$parent.$index}}-{{$index}}" name="constraints[$parent.$index][$index]" ng-model="constraints[$parent.$index][$index]" required>
+                  <input type="number" step="0.5" id="objectFunction-{{$parent.$index}}-{{$index}}" name="constraints[$parent.$index][$index]" ng-model="constraints[$parent.$index][$index]" required>
                   <label for="objectFunction-{{$parent.$index}}-{{$index}}">x{{$index+1}}</label>
                   {% endraw %}
                 </td>
@@ -102,7 +102,7 @@
                   </select>
                 </td>
                 <td>
-                  <input type="number" min="0" step="0.5" name="b[$index]" ng-model="b[$index]" required>
+                  <input type="number" step="0.5" name="b[$index]" ng-model="b[$index]" required>
                 </td>
               </tr>
             </tbody>
