--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -63,3 +63,13 @@ input.ng-invalid.ng-touched {
 timer {
 	font-size: 25px;
 }
+
+table.sensitivity th:nth-child(2), table.sensitivity td:nth-child(2) {
+	text-align: center;
+}
+table.sensitivity th:nth-child(3), table.sensitivity td:nth-child(3) {
+	text-align: center;
+}
+table.sensitivity tr.divisor td {
+	border-top: 3px solid #ddd;
+}
